tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_mutable_reference_to_array_element_as_func_arg/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Mutable references to array elements are currently unsupported
  ┌─ src/main.nr:7:18
  │
7 │         foo(&mut state[0]);
  │                  -------- Try storing the element in a fresh variable first
  │

Aborting due to 1 previous error
