tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_mutable_reference_to_array_element_as_func_arg/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Mutable references to array elements are currently unsupported
  ┌─ src/main.nr:7:18
  │
7 │         foo(&mut state[0]);
  │                  -------- Try storing the element in a fresh variable first
  │

Aborting due to 1 previous error
